--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,11 @@ section .hyperlink:hover {
     margin-right: 20px;
 }
 
+.art-me img {
+    border-radius: 10px;
+}
+
+
 @media only screen and (min-width: 768px) {
     h2 {
         font-size: 2.5em;
