--- a/css/about.css
+++ b/css/about.css
@@ -209,6 +209,12 @@ h4, h5 {
     }
 }
 
+.me-icon {
+    border-radius: 20px;
+    width: 100%;
+    object-fit: cover;
+}
+
 @media only screen and (min-width: 1100px) {
     .profile-container {
         margin: 50px auto 0 auto;
