--- a/css/about.css
+++ b/css/about.css
@@ -210,10 +210,12 @@ h4, h5 {
 }
 
 .me-icon {
-    border-radius: 20px;
-    width: 100%;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
 }
+
 
 @media only screen and (min-width: 1100px) {
     .profile-container {
