--- a/css/music.css
+++ b/css/music.css
@@ -233,6 +233,12 @@ input[type="range"]:active::-ms-thumb {
   font-size: 0.75em;
 }
 
+.album-cover img {
+    width: 100%; /* ให้ภาพขยายเต็มความกว้างของ container */
+    height: auto; /* ความสูงจะปรับตามอัตราส่วนภาพ */
+    object-fit: cover; /* ใช้ cover หรือ contain ตามที่คุณต้องการ */
+}
+
 .bottom-controls {
   margin: 1.75rem auto 0 auto;
   /* 28px */
